--- a/Aunalytics - Data Science - Matt Kennedy-checkpoint.ipynb
+++ b/Aunalytics - Data Science - Matt Kennedy-checkpoint.ipynb
@@ -22,171 +22,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>workclass</th>\n",
-       "      <th>fnlwgt</th>\n",
-       "      <th>education</th>\n",
-       "      <th>education-num</th>\n",
-       "      <th>marital-status</th>\n",
-       "      <th>occupation</th>\n",
-       "      <th>relationship</th>\n",
-       "      <th>race</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>capital-gain</th>\n",
-       "      <th>capital-loss</th>\n",
-       "      <th>hours-per-week</th>\n",
-       "      <th>native-country</th>\n",
-       "      <th>class</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>39</td>\n",
-       "      <td>State-gov</td>\n",
-       "      <td>77516</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Never-married</td>\n",
-       "      <td>Adm-clerical</td>\n",
-       "      <td>Not-in-family</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>2174</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>50</td>\n",
-       "      <td>Self-emp-not-inc</td>\n",
-       "      <td>83311</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Exec-managerial</td>\n",
-       "      <td>Husband</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>38</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>215646</td>\n",
-       "      <td>HS-grad</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Divorced</td>\n",
-       "      <td>Handlers-cleaners</td>\n",
-       "      <td>Not-in-family</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>53</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>234721</td>\n",
-       "      <td>11th</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Handlers-cleaners</td>\n",
-       "      <td>Husband</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>28</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>338409</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Prof-specialty</td>\n",
-       "      <td>Wife</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40</td>\n",
-       "      <td>Cuba</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   age          workclass  fnlwgt   education  education-num  \\\n",
-       "0   39          State-gov   77516   Bachelors             13   \n",
-       "1   50   Self-emp-not-inc   83311   Bachelors             13   \n",
-       "2   38            Private  215646     HS-grad              9   \n",
-       "3   53            Private  234721        11th              7   \n",
-       "4   28            Private  338409   Bachelors             13   \n",
-       "\n",
-       "        marital-status          occupation    relationship    race      sex  \\\n",
-       "0        Never-married        Adm-clerical   Not-in-family   White     Male   \n",
-       "1   Married-civ-spouse     Exec-managerial         Husband   White     Male   \n",
-       "2             Divorced   Handlers-cleaners   Not-in-family   White     Male   \n",
-       "3   Married-civ-spouse   Handlers-cleaners         Husband   Black     Male   \n",
-       "4   Married-civ-spouse      Prof-specialty            Wife   Black   Female   \n",
-       "\n",
-       "   capital-gain  capital-loss  hours-per-week  native-country   class  \n",
-       "0          2174             0              40   United-States   <=50K  \n",
-       "1             0             0              13   United-States   <=50K  \n",
-       "2             0             0              40   United-States   <=50K  \n",
-       "3             0             0              40   United-States   <=50K  \n",
-       "4             0             0              40            Cuba   <=50K  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#First row is headers, so just simple import on the csv data using pandas\n",
-    "train_data = pd.read_csv(\"au_train.csv\")"
+    "train_csv = pd.read_csv(\"au_train.csv\")\n",
+    "test_csv = pd.read_csv(\"au_test.csv\")"
    ]
   },
   {
@@ -201,36 +41,137 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "workclass\n",
-      "education\n",
-      "marital-status\n",
-      "occupation\n",
-      "relationship\n",
-      "race\n",
-      "sex\n",
-      "native-country\n",
-      "class\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Convert object columns to discrete numerical values\n",
-    "for col in train_data:\n",
-    "    if train_data[col].dtype == np.dtype('object'):\n",
-    "        print(col)\n",
-    "        temp_col = pd.Categorical(train_data[col])\n",
+    "for col in train_csv:\n",
+    "    if train_csv[col].dtype == np.dtype('object'):\n",
+    "        temp_col = pd.Categorical(train_csv[col])\n",
     "        temp_col = temp_col.codes\n",
-    "        train_data[col] = temp_col"
+    "        train_csv[col] = temp_col\n",
+    "\n",
+    "#Do the same for the test data\n",
+    "for col in test_csv:\n",
+    "    if test_csv[col].dtype == np.dtype('object'):\n",
+    "        temp_col = pd.Categorical(test_csv[col])\n",
+    "        temp_col = temp_col.codes\n",
+    "        test_csv[col] = temp_col"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Now we can load the data for tensorflow and start making the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Pop the class columns off each dataset to save as targets for each\n",
+    "train_y = train_csv.pop('class')\n",
+    "test_y = test_csv.pop('class')\n",
+    "\n",
+    "#Load train csv into tensor, then shuffle and create batches\n",
+    "train_dataset = tf.data.Dataset.from_tensor_slices((train_csv.values, train_y.values))\n",
+    "train_dataset = train_dataset.shuffle(len(train_csv)).batch(50)\n",
+    "\n",
+    "#Load test csv into tensor\n",
+    "test_dataset = tf.data.Dataset.from_tensor_slices((test_csv.values, test_y.values))\n",
+    "test_dataset = test_dataset.batch(len(test_csv))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_compiled_model():\n",
+    "    model = tf.keras.Sequential([\n",
+    "        tf.keras.layers.Dense(500, activation='relu'),\n",
+    "        tf.keras.layers.Dense(250, activation='relu'),\n",
+    "        tf.keras.layers.Dense(1)\n",
+    "    ])\n",
+    "\n",
+    "    model.compile(optimizer='adam',\n",
+    "        loss=tf.keras.losses.BinaryCrossentropy(from_logits=True),\n",
+    "        metrics=['accuracy'])\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "652/652 [==============================] - 1s 1ms/step - loss: 766.8135 - accuracy: 0.6766\n",
+      "Epoch 2/5\n",
+      "652/652 [==============================] - 1s 1ms/step - loss: 282.6711 - accuracy: 0.6815\n",
+      "Epoch 3/5\n",
+      "652/652 [==============================] - 1s 1ms/step - loss: 168.3123 - accuracy: 0.6819\n",
+      "Epoch 4/5\n",
+      "652/652 [==============================] - 1s 1ms/step - loss: 73.9150 - accuracy: 0.6900\n",
+      "Epoch 5/5\n",
+      "652/652 [==============================] - 1s 1ms/step - loss: 51.5156 - accuracy: 0.6851\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x1d4b925cd60>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = get_compiled_model()\n",
+    "model.fit(train_dataset, epochs=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 1ms/step - loss: 47.4002 - accuracy: 0.7939\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[47.40016555786133, 0.7939316034317017]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(test_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
