--- a/Aunalytics - Data Science - Matt Kennedy-checkpoint.ipynb
+++ b/Aunalytics - Data Science - Matt Kennedy-checkpoint.ipynb
@@ -52,6 +52,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The below imports and methods are used throughout the notebook, so they are defined at the start."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -1494,13 +1501,7 @@
       "1018/1018 [==============================] - 1s 806us/step - loss: 0.3229 - accuracy: 0.8418\n",
       "Epoch 77/500\n",
       "1018/1018 [==============================] - 1s 814us/step - loss: 0.3239 - accuracy: 0.8436\n",
-      "Epoch 78/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 78/500\n",
       "1018/1018 [==============================] - 1s 803us/step - loss: 0.3237 - accuracy: 0.8414\n",
       "Epoch 79/500\n",
       "1018/1018 [==============================] - 1s 781us/step - loss: 0.3240 - accuracy: 0.8412\n",
@@ -1810,13 +1811,7 @@
       "1018/1018 [==============================] - 1s 786us/step - loss: 0.3042 - accuracy: 0.8506\n",
       "Epoch 229/500\n",
       "1018/1018 [==============================] - 1s 786us/step - loss: 0.3036 - accuracy: 0.8503\n",
-      "Epoch 230/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 230/500\n",
       "1018/1018 [==============================] - 1s 828us/step - loss: 0.3034 - accuracy: 0.8501\n",
       "Epoch 231/500\n",
       "1018/1018 [==============================] - 1s 823us/step - loss: 0.3033 - accuracy: 0.8514\n",
@@ -2126,13 +2121,7 @@
       "1018/1018 [==============================] - 1s 794us/step - loss: 0.2924 - accuracy: 0.8557\n",
       "Epoch 381/500\n",
       "1018/1018 [==============================] - 1s 766us/step - loss: 0.2928 - accuracy: 0.8556\n",
-      "Epoch 382/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 382/500\n",
       "1018/1018 [==============================] - 1s 786us/step - loss: 0.2923 - accuracy: 0.8553\n",
       "Epoch 383/500\n",
       "1018/1018 [==============================] - 1s 761us/step - loss: 0.2938 - accuracy: 0.8568\n",
