--- a/Aunalytics - Data Science - Matt Kennedy-checkpoint.ipynb
+++ b/Aunalytics - Data Science - Matt Kennedy-checkpoint.ipynb
@@ -1242,11 +1242,12 @@
    "metadata": {},
    "source": [
     "## Classification\n",
-    "For this assessment, I decided to use 3 different approaches for classification:\n",
+    "For this assessment, I decided to use 4 different approaches for classification:\n",
     "\n",
     "* Neural Network\n",
     "* Naive Bayes\n",
     "* SVM\n",
+    "* Random forest\n",
     "\n",
     "Before each approach, I will discuss why I chose that approach, the pros and cons to that algorithm, improvements that could be made, and I will discuss results and visualizations after each algorithm.\n"
    ]
