--- a/Aunalytics - Data Science - Matt Kennedy-checkpoint.ipynb
+++ b/Aunalytics - Data Science - Matt Kennedy-checkpoint.ipynb
@@ -1286,7 +1286,7 @@
     "* \"Black box\" method - not always clear what is going on in the neural network\n",
     "* Due to hyperparameters offering so much customization, hard to know exactly what is best with limited time\n",
     "\n",
-    "#### Improvements that could be made to my implementation\n",
+    "#### Improvements that could be made\n",
     "* Again, hyperparameters - performing hyperparameter optimization would be ideal, but with limited time, this solution works well enough.\n",
     "* Defining what type of neural network is best for this type of classification. There are many different types of networks, so spending time to find which is best could show improvements."
    ]
@@ -2534,7 +2534,7 @@
     "* Anything in test data not in training data will be set to probability 0, and model will be unable to make a prediction for that class\n",
     "* Assumption of indendence is rarely true\n",
     "\n",
-    "#### Improvements that could be made to my implementation\n",
+    "#### Improvements that could be made\n",
     "* Instead of a naive bayes approach, spending time to implement a bayesian network instead where features are related to each other\n",
     "* Create a generative model for missing data, so model doesn't have to guess 0 if the data is missing"
    ]
@@ -2710,7 +2710,7 @@
     "* The more overlap classes have, the worse the performance\n",
     "* Selecting hyperparameters and kernel functions can be difficult\n",
     "\n",
-    "#### Improvements that could be made to my implementation\n",
+    "#### Improvements that could be made\n",
     "* Due to time constraints, I went with scikit's built in SVM. Given time, I'd be able to fiddle around with this more and pick the best options for this SVM\n",
     "* This one is just a time constraint, but due to the time SVM's take to train, include more samples in the fitting method/using a linear kernel."
    ]
@@ -2894,13 +2894,13 @@
     "* Works poorly when features aren't correlated\n",
     "* Multitudes of hyperparameters can wildly affect performance\n",
     "\n",
-    "#### Improvements that could be made to my implementation\n",
+    "#### Improvements that could be made\n",
     "* Tweak hyperparameters delicately for best results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2918,14 +2918,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Runtime of SVM: 00:00:02.15 (HH:MM:SS.MS)\n"
+      "Runtime of SVM: 00:00:02.16 (HH:MM:SS.MS)\n"
      ]
     }
    ],
@@ -2957,7 +2957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
