--- a/Aunalytics - Data Science - Matt Kennedy-checkpoint.ipynb
+++ b/Aunalytics - Data Science - Matt Kennedy-checkpoint.ipynb
@@ -2939,6 +2939,7 @@
     "test_x = test_csv.values.tolist()\n",
     "\n",
     "rf = RandomForestClassifier(criterion=\"entropy\", random_state=0)\n",
+    "\n",
     "start = time.time()\n",
     "rf.fit(train_x, train_y)\n",
     "end = time.time()\n",
@@ -3050,7 +3051,7 @@
    "metadata": {},
    "source": [
     "## ROC-curves\n",
-    "Displayed here are the 3 ROC curves for each classification algorithm used above."
+    "Displayed here are the ROC curves for each classification algorithm used above."
    ]
   },
   {
@@ -3074,6 +3075,7 @@
    "source": [
     "plt.figure(figsize=(10,8))\n",
     "lw = 2\n",
+    "\n",
     "#Plot neural network\n",
     "plt.plot(nn_fpr, nn_tpr, color='r',\n",
     "         lw=lw, label='AUROC (NN) (area = %0.2f)' % nn_roc_auc)\n",
@@ -3301,7 +3303,7 @@
     "* Capital Gain/Capital Loss - too many items to include for this example\n",
     "* Hours per week - too many items to include for this example\n",
     "\n",
-    "Below, we will save notable results - those that have >=15 matching cases, into a text file for future use."
+    "Below, we will save notable results - those that have >=15 matching cases, into a text file for future use. Additionally, we will only store results with either <=20% or >=30% of people in the >50k salary category."
    ]
   },
   {
@@ -3386,6 +3388,7 @@
     "        cart_prod_dict[comb][0] += lte50k\n",
     "        cart_prod_dict[comb][1] += gt50k\n",
     "\n",
+    "#This takes over 11 hours, set this boolean to true to re-store data\n",
     "run_this_cell = False\n",
     "if run_this_cell:\n",
     "    start = time.time()\n",
@@ -3398,13 +3401,15 @@
     "        minutes, seconds = divmod(rem, 60)\n",
     "        f.write(\"Runtime of brute force method: {:0>2}:{:0>2}:{:05.2f} (HH:MM:SS.MS)\\n\\n\".format(int(hours),int(minutes),seconds))\n",
     "\n",
-    "        #Go through each result, calculate if significant\n",
+    "        #Go through each result, store if significant (>= 15 cases)\n",
     "        notable_results = {}\n",
     "        for k, v in cart_prod_dict.items():\n",
     "            if v[0] + v[1] >= 15:\n",
     "                perc = v[1] / (v[0] + v[1])\n",
     "                if perc <= 0.2 or perc >= 0.3:\n",
     "                    notable_results[k] = [v[0], v[1], (v[1] / (v[0] + v[1])) * 100]\n",
+    "                    \n",
+    "        #Sort from highest to lowest percent\n",
     "        notable_results = sorted(notable_results.items(), key=lambda x: x[1][2], reverse=True)\n",
     "\n",
     "        #Save results of significance to file for future use\n",
