--- a/Aunalytics - Data Science - Matt Kennedy-checkpoint.ipynb
+++ b/Aunalytics - Data Science - Matt Kennedy-checkpoint.ipynb
@@ -3299,7 +3299,6 @@
     "\n",
     "Features to remove:\n",
     "* Ages - as discussed above, age is reflected in many other features, which will be on this list\n",
-    "* Relationship - same as marital status\n",
     "* Capital Gain/Capital Loss - too many items to include for this example\n",
     "* Hours per week - too many items to include for this example\n",
     "\n",
@@ -4479,15 +4478,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "208 categories, or 63.22% of categories with <25% of people making >50k\n",
-      "121 categories, or 36.78% of categories with over >=25% of people making >50k\n",
+      "206 categories, or 62.61% of categories with <25% of people making >50k\n",
+      "123 categories, or 37.39% of categories with over >=25% of people making >50k\n",
       "\n",
       "9989 people are in the \"<25% making >50k\" categories. Of those people, there are 4.49% making >50k\n",
       "3964 people are in the \">=25% making >50k\" categories. Of those people, there are 56.36% making >50k\n"
@@ -4498,7 +4497,7 @@
     "#Get category counts\n",
     "cat_counts = [0, 0]\n",
     "for i in sorted_data:\n",
-    "    if i[1]['%'] < 25:\n",
+    "    if i[1]['%'] < 20:\n",
     "        cat_counts[0]+=1\n",
     "    else:\n",
     "        cat_counts[1]+=1\n",
@@ -4529,10 +4528,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the above results, we can clearly see some very interesting trends based on the categorical data alone.\n",
+    "From the above results, we can see some interesting trends based on the categorical data alone.\n",
     "* The best performing category, with 56 out of 57 samples making >50k, are self-emp-inc, have prof-school education, are married-civ-spouse, have prof-specialty occupation, are white males, and live in the US.\n",
     "* Almost every category above 40% people making >50k has 'Married-civ-spouse' for marital status.\n",
-    "* Workclass alone doesn't seem to be as correlated to success - the top 6 performing categories all have different workclasses. However, many poor performing categories seem to have 'Private' for the workclass.\n",
+    "* Workclass alone doesn't seem to be as correlated to success - the top 6 performing categories all have different workclasses. However, many poor performing categories seem to have 'Private' for the workclass. This could also be due to the workclass 'Private' being the largest reported for the 'Occupation' feature.\n",
     "* Although 'White' is seen as race for most high-performers, it is also seen frequently in the average and low performers. This shows that 'White' was the largest race involved in this study.\n",
     "* There doesn't appear to be many, if any, native countries other than 'United-States'. This could be due to numerical features not included in this selection, or it shows less of a correlation for notable categories.\n",
     "* 2/3 of notable categories have <25% making >50k, while the last third has >=25%.\n",
