--- a/Aunalytics - Data Science - Matt Kennedy-checkpoint.ipynb
+++ b/Aunalytics - Data Science - Matt Kennedy-checkpoint.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1506,13 +1506,7 @@
       "1018/1018 [==============================] - 1s 844us/step - loss: 0.3231 - accuracy: 0.8412\n",
       "Epoch 77/500\n",
       "1018/1018 [==============================] - 1s 842us/step - loss: 0.3224 - accuracy: 0.8426\n",
-      "Epoch 78/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 78/500\n",
       "1018/1018 [==============================] - 1s 846us/step - loss: 0.3229 - accuracy: 0.8416\n",
       "Epoch 79/500\n",
       "1018/1018 [==============================] - 1s 844us/step - loss: 0.3231 - accuracy: 0.8423\n",
@@ -1822,13 +1816,7 @@
       "1018/1018 [==============================] - 1s 855us/step - loss: 0.3009 - accuracy: 0.8517\n",
       "Epoch 229/500\n",
       "1018/1018 [==============================] - 1s 852us/step - loss: 0.3001 - accuracy: 0.8530\n",
-      "Epoch 230/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 230/500\n",
       "1018/1018 [==============================] - 1s 843us/step - loss: 0.2995 - accuracy: 0.8528\n",
       "Epoch 231/500\n",
       "1018/1018 [==============================] - 1s 827us/step - loss: 0.2998 - accuracy: 0.8537\n",
@@ -2138,13 +2126,7 @@
       "1018/1018 [==============================] - 1s 817us/step - loss: 0.2924 - accuracy: 0.8559\n",
       "Epoch 381/500\n",
       "1018/1018 [==============================] - 1s 815us/step - loss: 0.2905 - accuracy: 0.8573\n",
-      "Epoch 382/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 382/500\n",
       "1018/1018 [==============================] - 1s 821us/step - loss: 0.2896 - accuracy: 0.8580\n",
       "Epoch 383/500\n",
       "1018/1018 [==============================] - 1s 826us/step - loss: 0.2925 - accuracy: 0.8589\n",
@@ -2900,7 +2882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2918,14 +2900,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Runtime of SVM: 00:00:02.16 (HH:MM:SS.MS)\n"
+      "Runtime of RF: 00:00:02.13 (HH:MM:SS.MS)\n"
      ]
     }
    ],
@@ -2946,7 +2928,7 @@
     "\n",
     "hours, rem = divmod(end-start, 3600)\n",
     "minutes, seconds = divmod(rem, 60)\n",
-    "print(\"Runtime of SVM: {:0>2}:{:0>2}:{:05.2f} (HH:MM:SS.MS)\".format(int(hours),int(minutes),seconds))"
+    "print(\"Runtime of RF: {:0>2}:{:0>2}:{:05.2f} (HH:MM:SS.MS)\".format(int(hours),int(minutes),seconds))"
    ]
   },
   {
@@ -4538,7 +4520,7 @@
     "\n",
     "Additional statistics at the bottom of the output:\n",
     "* The percent of people in the \">=25% making >50k\" category is over 1200% more than those in the \"<25% making 50k\" category.\n",
-    "* The percent in both sections shows a great variance compared to the 25/75 split seen in the data above."
+    "* The total percents for each split are extremely far from the 25/75 split, with only 4.49% in the \"<25% making >50k\" category making >50k, and 56.36% in the \">=25% making >50k\" making >50k."
    ]
   },
   {
